<resources>
    <string name="app_name">ReporteMascotasPerdidas</string>
    <string name="title_activity_maps">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agregar">agregar</string>

    <string name="tipo">Tipo de animal</string>
    <string name="tamano">Tapaño</string>
    <string name="color">Color</string>
    <string name="caracteristicas">Caracteristicas</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="reporte">Nuevo reporte</string>
    <string name="search">Eliminar</string>
    <string name="compartir">Compartir</string>
    <string name="facebook_app_id">3971515856288377</string>
    <string name="fb_login_protocol_scheme">fb3971515856288377</string>
    <string name="facebookLogin">Iniciar sesion con Facebook</string>
    <string name="guardarreporte">guardarReporte</string>
    <string name="regresoalmapa">regresoAlMapa</string>
    <string name="fotos">fotos</string>
    <string name="mis_reportes">Mis Reportes</string>
    <string name="salir">Salir</string>
    <string name="Inicio">inicio</string>
    <string name="correo">Contacto</string>

</resources>